<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seekthermal_camera</name>
  <version>1.0.0</version>
  <description>The seekthermal_camera package</description>
  <maintainer email="titouan.belier@ensta-bretagne.org">Titouan BELIER</maintainer>
  <license>MIT License</license>

  <author email="titouan.belier@ensta-bretagne.org">Titouan BELIER</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>seek_thermal</depend>
  <depend>camera_info_manager</depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <exec_depend>libusb-1.0</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
